--- a/style.css
+++ b/style.css
@@ -27,6 +27,16 @@ body {
 	flex-direction: column;
 	justify-content: center;
 }
+.sr-only {
+	clip: rect(1px, 1px, 1px, 1px);
+	clip-path: inset(50%);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+}
 picture {
 	display: block;
 }
